Unify page number format in bibliography.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -49,7 +49,7 @@
     journal = {International Journal of Chronic Obstructive Pulmonary Disease},
     year = {2018},
     volume = {13},
-    pages = {1289-1296},
+    pages = {1289--1296},
     doi = {10.2147/COPD.S157594},
 }
 
@@ -59,7 +59,7 @@
     year = {2017},
     volume = {55},
     number = {2},
-    pages = {591-615},
+    pages = {591--615},
     journal = {Urban Affairs Review},
     doi = {10.1177/1078087417726394},
     author = {Cali Curley and Rachel M. Krause and Richard Feiock and
@@ -71,7 +71,7 @@
              event logs",
     journal = "Knowledge-Based Systems",
     volume = "84",
-    pages = "203-213",
+    pages = "203--213",
     year = "2015",
     doi = "10.1016/j.knosys.2015.04.012",
     author = "Pavlos Delias and Michael Doumpos and Evangelos Grigoroudis and
@@ -88,7 +88,7 @@
     journal = {American Journal of Respiratory and Critical Care Medicine},
     volume = {186},
     number = {2},
-    pages = {155-161},
+    pages = {155--161},
     year = {2012},
     doi = {10.1164/rccm.201201-0034OC},
 }
@@ -96,7 +96,7 @@
 @article{Djabali2018,
     author = {Djabali, Yasmina and Rabta, Boualem and Aissani, Djamil},
     year = {2018},
-    pages = {507-531},
+    pages = {507--531},
     title = {Approximating Service-time Distributions by Phase-type
              Distributions in Single-server Queues: A Strong Stability
              Approach},
@@ -111,7 +111,7 @@
     author = {Erlang, Agner Krarup},
     journal = {Post Office Electrical Engineer's Journal},
     volume = {10},
-    pages = {189-197},
+    pages = {189--197},
     year = {1917},
 }
 
@@ -148,7 +148,7 @@
     year = {2016},
     volume = {48},
     number = {4},
-    pages = {1117-1138},
+    pages = {1117--1138},
     journal = {Advances in Applied Probability},
     doi = {10.1017/apr.2016.67},
     author = {Alexander Goldenshluger},
@@ -165,7 +165,7 @@
 @article{Harper2006,
     author = {Harper, Paul R. and Winslett, David},
     year = {2006},
-    pages = {146-156},
+    pages = {146--156},
     title = {Classification trees: A possible method for maternity risk
              grouping},
     volume = {169},
@@ -180,7 +180,7 @@
     year = {2019},
     volume = {6},
     number = {2},
-    pages = {166-177},
+    pages = {166--177},
     journal = {Chronic Obstructive Pulmonary Diseases: Journal of the COPD
                Foundation},
     doi = {10.15326/jcopdf.6.2.2018.0145},
@@ -220,7 +220,7 @@
     journal = {IEEE Journal of Translational Engineering in Health and
                Medicine},
     volume = {3},
-    pages = {1-10},
+    pages = {1--10},
     doi = {10.1109/JTEHM.2015.2400436},
 }
 
@@ -241,7 +241,7 @@
     year = {2014},
     volume = {34},
     number = {4},
-    pages = {218-225},
+    pages = {218--225},
     journal = {Chronic Diseases and Injuries in Canada},
     doi = {}, 
     author = {J P Kuwornu and L M Lix and S Shooshtari},
@@ -285,7 +285,7 @@
     journal = {Communications in Statistics - Simulation and Computation},
     volume = {41},
     number = {3},
-    pages = {419-435},
+    pages = {419--435},
     year  = {2012},
     doi = {10.1080/03610918.2011.588358},
 }
@@ -295,7 +295,7 @@
     year = {2014},
     volume = {17},
     number = {4},
-    pages = {372-411},
+    pages = {372--411},
     journal = {Organizational Research Methods},
     doi = {10.1177/1094428114548590},
     author = {Daniel A. Newman},
@@ -313,7 +313,7 @@
     journal = "European Journal of Operational Research",
     volume = "87",
     number = "3",
-    pages = "1429 - 1448",
+    pages = "1429--1448",
     year = "2008",
     doi = "https://doi.org/10.1016/j.ejor.2006.09.023",
     author = "Sigurdur Olafsson and Xiaonan Li and Shuning Wu",
@@ -326,7 +326,7 @@
     journal = {Journal of Simulation},
     volume = {13},
     number = {1},
-    pages = {68-82},
+    pages = {68--82},
     year  = {2019},
     doi = {10.1080/17477778.2018.1473909},
 }
@@ -337,7 +337,7 @@
     journal = {Journal of Medical Systems},
     year = {2012},
     volume = {36},
-    pages = {541-547},
+    pages = {541--547},
     doi = {10.1007/s10916-010-9499-7},
 }
 
@@ -348,7 +348,7 @@
     journal = {International Journal of Research \& Method in Education},
     volume = {39},
     number = {1},
-    pages = {19-37},
+    pages = {19--37},
     year  = {2016},
     doi = {10.1080/1743727X.2014.979146},
 }
@@ -381,7 +381,7 @@
     journal = "Information Systems",
     volume = "37",
     number = "2",
-    pages = "99 - 116",
+    pages = "99--116",
     year = "2012",
     doi = "10.1016/j.is.2011.01.003",
     author = "{\'A}lvaro Rebuge and Diogo R. Ferreira",
@@ -408,7 +408,7 @@
     journal = {Irish Journal of Medical Science},
     volume = {185},
     number = {2},
-    pages = {453-461},
+    pages = {453--461},
     doi = {10.1007/s11845-015-1359-5},
 }
 
@@ -457,7 +457,7 @@
     journal = {Problemy Pereda{\v{c}}hi Informatsii},
     volume = {5},
     number = {3},
-    pages = {64-72},
+    pages = {64--72},
     year = {1969},
 }
 
@@ -480,7 +480,7 @@
     journal = {Health Affairs},
     volume = {35},
     number = {5},
-    pages = {769-775},
+    pages = {769--775},
     year = {2016},
     doi = {10.1377/hlthaff.2015.1311},
 }
@@ -530,7 +530,7 @@
     journal = {Anaesthesia},
     volume = {70},
     number = {1},
-    pages = {32-40},
+    pages = {32--40},
     doi = {10.1111/anae.12839},
     year = {2015},
 }
