Add qualifiers to end of intro.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -27,7 +27,7 @@ parameters with the Wasserstein distance; to operational healthcare research
 through the weaving together of the combination of methods used in this work
 despite data constraints; and to public health research by adding to the growing
 body of mathematical and operational work around a condition that is vital to
-understand.
+understand operationally, socially and medically.
 
 The remainder of the paper is structured as follows: Section~\ref{sec:intro}
 provides a literature review, and an overview of the data and its clustering;
