Revise abstract to focus on novelty.

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,11 +1,11 @@
 \begin{abstract}
     Data-driven research in healthcare settings is paramount. This work
-    investigates a population of COPD patients in the South Wales area and
-    encompasses the topics of segmentation analysis, queuing modelling, and the
-    recovery of queuing parameters from incomplete data. This is done despite
-    common limitations in operational research with regard to the availability
-    of fine-grained data as this work only uses administrative hospital spell
-    data from those patients.
+    investigates a population of COPD patients in the South Wales area using a
+    novel combination of often distinct modes of analysis: segmentation,
+    operational queuing theory, and the recovery of queuing parameters
+    from incomplete data. This is done despite common limitations in operational
+    research with regard to the availability of fine-grained data as this work
+    only uses administrative hospital spell data from those patients.
 
     An effective clustering of the population is found from this granular data
     and feeds into a multi-class \(M/M/c\) model, the parameters of which are
