Catch typo in cluster summary paras.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -264,7 +264,7 @@ summarised succinctly:
         weeks long. Moreover, the median number of COPD-related admissions in
         the last year is elevated indicating that patients presenting in this
         way require more interactions with the system.
-    \item Cluster 1 is the next largest segment and represents the spells with
+    \item Cluster 1 is the second largest segment and represents the spells with
         complex clinical profiles despite lower resource requirements.
         Specifically, the spells in this cluster have the highest median CCI and
         number of LTCs, and the highest condition prevalences across all
