Fix grammatical error in model assumptions para.

--- a/sections/model.tex
+++ b/sections/model.tex
@@ -44,7 +44,7 @@ assumption must be made about the true `service' time of a patient in hospital.
 It is assumed here that the mean service time of a group of patients may be
 approximated via their mean length of stay, i.e.\ the mean time spent in the
 system. For simplicity, this work assumes that for each cluster, \(i\), the mean
-service time of that cluster, \(\frac{1}{\mu_i}\), to be directly proportional
+service time of that cluster, \(\frac{1}{\mu_i}\), is directly proportional
 to the mean total system time of that cluster, \(\frac{1}{\phi_i}\), such that:
 \begin{equation}\label{eq:services}
     \mu_i = p_i \phi_i
