Remove region from title.

--- a/main.tex
+++ b/main.tex
@@ -36,8 +36,7 @@
 
 \title{%
     Segmentation analysis and the recovery of queuing parameters via the
-    Wasserstein distance: a study of administrative data for COPD patients from
-    the Cwm Taf region
+    Wasserstein distance: a study of administrative data for COPD patients
 }
 \author{}
 \date{}
