s/Many of such methods/Many such methods

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -3,7 +3,7 @@
 Population health research is becoming increasingly based on data-driven methods
 (as opposed to those designed solely by clinical experts) for patient-centred
 care through the advent of accessible software and a relative abundance of
-electronic data. However, many of such methods rely heavily on detailed data ---
+electronic data. However, many such methods rely heavily on detailed data ---
 about both the healthcare system and its population --- which may limit research
 where sophisticated data pipelines are not yet in place.
 
