--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,11 +1,12 @@
 \begin{abstract}
-    Data-driven research in healthcare settings is paramount. This work
-    investigates a population of COPD patients in the South Wales area using a
-    novel combination of often distinct modes of analysis: segmentation,
-    operational queuing theory, and the recovery of queuing parameters
-    from incomplete data. This is done despite common limitations in operational
-    research with regard to the availability of fine-grained data as this work
-    only uses administrative hospital spell data from those patients.
+    This work analyses how the resource requirements of a population of COPD
+    patients in the South Wales area may change, and quantifies how those
+    changes effect the strains on a hospital system. This is done using a novel
+    combination of often distinct modes of analysis: segmentation, operational
+    queuing theory, and the recovery of queuing parameters from incomplete data.
+    This is done despite common limitations in operational research with regard
+    to the availability of fine-grained data as this work only uses
+    administrative hospital spell data from those patients.
 
     An effective clustering of the population is found from this granular data
     and feeds into a multi-class \(M/M/c\) model, the parameters of which are
@@ -14,4 +15,13 @@
     informative analysis of the underlying queuing system and the needs of the
     population under study through the simulation of several `what-if'
     scenarios.
+
+    The particular set of analyses used to form and study this model
+    considers, in effect, all types of patient arrivals as well how those types
+    each impact the system. With that, this study finds that there are no quick
+    solutions to reduce the impact of COPD patients on the system, including
+    adding capacity to the system. In fact, the only effective intervention to
+    reduce the strains of the COPD population is to enact some external policy
+    that directly improves the overall health of the COPD population before
+    arriving at the hospital.
 \end{abstract}
