--- a/sections/scenarios.tex
+++ b/sections/scenarios.tex
@@ -214,14 +214,14 @@ resources. However, the relative utilisation levels of the system resources can
 be reduced by moving arrivals from Cluster 0 to either Cluster 1 or Cluster 2,
 i.e.\ by reducing the overall resource requirements of such spells.
 
-In essence, these figures offer two messages: that while some hard spells are
-inevitable, they are manageable under the current state of the system, and that
-public health policy informed by this model should be preventative in nature. If
-an effective policy could be implemented to reduce the resource requirements of
-COPD patients when they arrive at a hospital --- for instance, by increasing
-access to community care or campaigns against harmful behaviours such as smoking
---- then lengths of stay and strains on the hospital's resources would be
-reduced, improving the system as a whole.
+In essence, this entire analysis offers two messages: that there are several
+ways in which the system can get worse and even overwhelmed but, more
+importantly, that any meaningful impact on the system must come from a stimulus
+outside of the system that results in more healthy patients arriving to the
+hospital. This is non-trivial; the first two scenarios in this analysis show
+that there are no quick solutions to reduce the effect of COPD patients on
+hospital capacity or length of stay. The only effective intervention is found
+through inter-cluster transfers.
 
 \begin{figure}
     \centering
