Fix typo in abstract.

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
     This work analyses how the resource requirements of a population of COPD
     patients in the South Wales area may change, and quantifies how those
-    changes effect the strains on a hospital system. This is done using a novel
+    changes affect the strains on a hospital system. This is done using a novel
     combination of often distinct modes of analysis: segmentation, operational
     queuing theory, and the recovery of queuing parameters from incomplete data.
     This is done despite common limitations in operational research with regard
