--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,12 +1,13 @@
 \begin{abstract}
-    This work analyses how the resource requirements of a population of COPD
-    patients in the South Wales area may change, and quantifies how those
-    changes affect the strains on a hospital system. This is done using a novel
-    combination of often distinct modes of analysis: segmentation, operational
-    queuing theory, and the recovery of queuing parameters from incomplete data.
-    This is done despite common limitations in operational research with regard
-    to the availability of fine-grained data as this work only uses
-    administrative hospital spell data from those patients.
+    This work uses a data-driven approach to analyse how the resource
+    requirements of a population of COPD patients in the South Wales area may
+    change, and quantifies how those changes affect the strains of the hospital
+    system the population interacts with. This is done using a novel combination
+    of often distinct modes of analysis: segmentation, operational queuing
+    theory, and the recovery of queuing parameters from incomplete data. This is
+    done despite common limitations in operational research with regard to the
+    availability of fine-grained data as this work only uses administrative
+    hospital spell data from those patients.
 
     An effective clustering of the population is found from this granular data
     and feeds into a multi-class \(M/M/c\) model, the parameters of which are
