Rephrase abstract to evade "this is done" repeats.

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -4,18 +4,19 @@
     change, and quantifies how those changes affect the strains of the hospital
     system the population interacts with. This is done using a novel combination
     of often distinct modes of analysis: segmentation, operational queuing
-    theory, and the recovery of queuing parameters from incomplete data. This is
-    done despite common limitations in operational research with regard to the
-    availability of fine-grained data as this work only uses administrative
-    hospital spell data from those patients.
+    theory, and the recovery of queuing parameters from incomplete data. By
+    combining these methods as presented here, it is demonstrated how the
+    potential limitations around the availability of fine-grained data can be
+    overcome in operational research. That is, despite only using administrative
+    hospital spell data, useful operational results are found.
 
-    An effective clustering of the population is found from this granular data
-    and feeds into a multi-class \(M/M/c\) model, the parameters of which are
-    recovered from the available data via a simple parameterisation and the
-    Wasserstein distance. This model is then used to conduct a substantial and
-    informative analysis of the underlying queuing system and the needs of the
-    population under study through the simulation of several `what-if'
-    scenarios.
+    The paper begins by finding an effective clustering of the population from
+    this granular data that feeds into a multi-class \(M/M/c\) model, the
+    parameters of which are recovered from the available data via a simple
+    parameterisation and the Wasserstein distance. This model is then used to
+    conduct a substantial and informative analysis of the underlying queuing
+    system and the needs of the population under study through the simulation of
+    several `what-if' scenarios.
 
     The particular set of analyses used to form and study this model
     considers, in effect, all types of patient arrivals as well how those types
