Change "South Wales" to "Cwm Taf Morgannwg UHB".

--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -5,7 +5,7 @@ that encompasses the topics of segmentation analysis, queuing models, and the
 recovery of queuing parameters from incomplete data. This is done despite common
 limitations in operational research with regard to the availability of
 fine-grained data, and this work only uses administrative hospital spell data
-from patients presenting COPD in the South Wales area.\
+from patients presenting COPD from the Cwm Taf Morgannwg UHB.\
 
 By considering a variety of attributes present in the data, and engineering
 some, an effective clustering of the spell population is identified that
