Apply suggestions from VK code review
Co-authored-by: Vince Knight <vincent.knight@gmail.com>

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -12,14 +12,14 @@
 
     The paper begins by finding an effective clustering of the population from
     this granular data that feeds into a multi-class \(M/M/c\) model, the
-    parameters of which are recovered from the available data via a simple
+    parameters of which are recovered from the available data via a 
     parameterisation and the Wasserstein distance. This model is then used to
     conduct a substantial and informative analysis of the underlying queuing
     system and the needs of the population under study through the simulation of
     several `what-if' scenarios.
 
     The particular set of analyses used to form and study this model
-    considers, in effect, all types of patient arrivals as well how those types
+    considers, in effect, all types of patient arrivals as well as how those types
     each impact the system. With that, this study finds that there are no quick
     solutions to reduce the impact of COPD patients on the system, including
     adding capacity to the system. In fact, the only effective intervention to
