--- a/tex/process.tex
+++ b/tex/process.tex
@@ -1,46 +1,6 @@
 \documentclass[border=5pt]{standalone}
 
-\usepackage{tikz}
-    \usetikzlibrary{%
-        arrows.meta,
-        decorations.pathreplacing,
-        decorations.text,
-        patterns,
-        shapes.arrows,
-        shapes.geometric
-    }
-
-\definecolor{blue}{HTML}{0072B2}
-\definecolor{green}{HTML}{009E73}
-\definecolor{orange}{HTML}{D55E00}
-\definecolor{pink}{HTML}{CC79A7}
-
-\pgfdeclarelayer{background}
-\pgfsetlayers{background,main}
-
-\tikzstyle{every picture} += [remember picture]
-\tikzstyle{na} = [baseline=-.5ex]
-
-\tikzset{%
-    queue/.pic={%
-        code{%
-            \node (rect) at (38.5mm, 10mm) {};
-            \draw[thick] (0, 0) -- ++(40mm, 0) -- ++(0, 20mm) -- ++(-40mm, 0);
-            \foreach \val in {0, ..., #1}{%
-                \draw[thick] ([xshift=-\val*5mm] 40mm, 20mm) -- ++(0, -20mm);
-            };
-
-            \foreach \val/\lab in {0/1, 1/2, 3/c-1, 4/c}{%
-                \node[draw, circle, thick, minimum size=10.5mm] (\lab)
-                    at (55.25mm, 30mm - \val * 10.5mm) {\footnotesize$\lab$};
-                \draw[-latex, thick] (rect.east) -- (\lab.west);
-            };
-            
-            \node at (55.25mm, 10mm) {$\vdots$};
-            \node at (5mm, 10mm) {$\cdots$};
-        };
-    }
-}
+\usepackage{process}
 
 \begin{document}
 
@@ -50,40 +10,41 @@
 
     %%%%%%%%%%%%
     % Data
-    \node[fill=gray!50, minimum width=20mm, rounded corners] (obs) at (-3, 7)
-        {%
-            \begin{tabular}{c}
-                Observed\\
-                data
-            \end{tabular}
-        };
+    \node[fill=gray!50, minimum width=20mm, rounded corners] (obs)
+    at (-35mm, 70mm) {%
+        \begin{tabular}{c}
+            Observed\\
+            data
+        \end{tabular}
+    };
 
-    \draw[decorate, decoration={brace, amplitude=5mm}] (-1.25, 5) -- (-1.25, 9);
+    \draw[decorate, decoration={brace, amplitude=5mm}]
+        (-14mm, 50mm) -- (-14mm, 90mm);
 
-    \node[fill=blue!50, minimum width=20mm, rounded corners] (c0) at (0, 8.5)
+    \node[fill=blue!50, minimum width=20mm, rounded corners] (c0) at (0, 85mm)
         {Cluster 0};
-    \node[fill=green!50, minimum width=20mm, rounded corners] (c1) at (0, 7.5)
+    \node[fill=green!50, minimum width=20mm, rounded corners] (c1) at (0, 75mm)
         {Cluster 1};
-    \node[fill=orange!50, minimum width=20mm, rounded corners] (c2) at (0, 6.5)
+    \node[fill=orange!50, minimum width=20mm, rounded corners] (c2) at (0, 65mm)
         {Cluster 2};
-    \node[fill=pink!50, minimum width=20mm, rounded corners] (c3) at (0, 5.5)
+    \node[fill=pink!50, minimum width=20mm, rounded corners] (c3) at (0, 55mm)
         {Cluster 3};
 
     % Params
-    \node at (25mm, 9.5) {%
+    \foreach \i/\colour/\cluster in {%
+        0/blue/c0, 1/green/c1, 2/orange/c2, 3/pink/c3%
+    }{%
+        \node (params-\i) at ([xshift=20mm] \cluster.east)
+            {\color{\colour}\(\lambda_{\i} \quad \phi_{\i}\)};
+        \draw[-latex, thick, \colour] (\cluster.east) -- (params-\i);
+    };
+    \node at ([yshift=6mm] params-0.north) {%
         \footnotesize\color{gray}{%
             \begin{tabular}{c}
                 Known\\
                 parameters
             \end{tabular}
         }
-    };
-    \foreach \i/\colour/\cluster in {%
-        0/blue/c0, 1/green/c1, 2/orange/c2, 3/pink/c3%
-    }{%
-        \node (params-\i) at ([xshift=15mm] \cluster.east)
-            {\color{\colour}\(\lambda_{\i} \quad \phi_{\i}\)};
-        \draw[-latex, thick, \colour] (\cluster.east) -- (params-\i);
     };
 
     %%%%%%%%%%%%
@@ -108,7 +69,7 @@
 
     % Services
     \foreach \val in {0, 1, 3, 4}{%
-        \draw[-latex, thick] (62mm, 30mm - \val * 10.5mm) -- ++(15mm, 0);
+        \draw[-latex, thick] (62mm, 30mm - \val * 11mm) -- ++(15mm, 0);
     };
     \draw[decorate, decoration={brace, amplitude=2mm}]
         (62mm, 35mm) -- ++(15mm, 0) node[midway, above=2mm] {%
