--- a/main.tex
+++ b/main.tex
@@ -23,10 +23,14 @@
 \usepackage{booktabs}
     \renewcommand{\arraystretch}{1.3}
 \usepackage{caption}
+\usepackage{standalone}
 \usepackage{subcaption}
 
 % Mathematics
 \usepackage{amssymb}
+
+% TiKz
+\usepackage{tex/process}
 
 % Custom lengths
 \newlength{\imgwidth}
