Move to horizontal alignment.

--- a/tex/process.tex
+++ b/tex/process.tex
@@ -11,7 +11,7 @@
     %%%%%%%%%%%%
     % Data
     \node[fill=gray!50, minimum width=20mm, rounded corners] (obs)
-    at (-35mm, 70mm) {%
+    at (-110mm, 10mm) {%
         \begin{tabular}{c}
             Observed\\
             data
@@ -19,15 +19,15 @@
     };
 
     \draw[decorate, decoration={brace, amplitude=5mm}]
-        (-14mm, 50mm) -- (-14mm, 90mm);
+        (-85mm, -10mm) -- (-85mm, 30mm);
 
-    \node[fill=blue!50, minimum width=20mm, rounded corners] (c0) at (0, 85mm)
+    \node[fill=blue!50, minimum width=20mm, rounded corners] (c0) at (-70mm, 25mm)
         {Cluster 0};
-    \node[fill=green!50, minimum width=20mm, rounded corners] (c1) at (0, 75mm)
+    \node[fill=green!50, minimum width=20mm, rounded corners] (c1) at (-70mm, 15mm)
         {Cluster 1};
-    \node[fill=orange!50, minimum width=20mm, rounded corners] (c2) at (0, 65mm)
+    \node[fill=orange!50, minimum width=20mm, rounded corners] (c2) at (-70mm, 5mm)
         {Cluster 2};
-    \node[fill=pink!50, minimum width=20mm, rounded corners] (c3) at (0, 55mm)
+    \node[fill=pink!50, minimum width=20mm, rounded corners] (c3) at (-70mm, -5mm)
         {Cluster 3};
 
     % Params
