--- a/tex/process.sty
+++ b/tex/process.sty
@@ -1,11 +1,10 @@
 \usepackage{tikz}
     \usetikzlibrary{%
-        arrows.meta,
+        arrows,
+        backgrounds,
         decorations.pathreplacing,
-        decorations.text,
-        patterns,
-        shapes.arrows,
-        shapes.geometric
+        shapes.geometric,
+        positioning,
     }
 
 \definecolor{blue}{HTML}{0072B2}
@@ -42,5 +41,27 @@
             \node at (55mm, 11mm) {$\vdots$};
             \node at (5mm, 10mm) {$\cdots$};
         };
+    },
+    myarrow/.style={%
+        line width=2mm,
+        draw=gray!50,
+        -triangle 60,
+        postaction={draw=gray!50, line width=4mm, shorten >=6mm, -},
+    },
+    double -latex/.style args={#1 colored by #2 and #3}{%
+        -latex,
+        line width=#1,
+        #2,
+        postaction={%
+            draw,
+            -latex,
+            #3,
+            line width=(#1)/3,
+            shorten <=(#1)/4,
+            shorten >=4.5*(#1)/3
+        },
+    },
+    mypointer/.style={%
+        double -latex=1mm colored by gray!50 and gray!50,
     }
 }
