--- a/sections/model.tex
+++ b/sections/model.tex
@@ -102,6 +102,7 @@ cluster \(i\) obtained from a simulation with \(c\) servers and
 \end{equation}
 
 \begin{figure}
+    \centering%
     \resizebox{\imgwidth}{!}{%
         \includestandalone{tex/process}
     }
